welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: illegal start of simple expression
if (b>=13 && b<=19) => {nb = nb + 1}
                    ^countTeen:5: error: illegal start of simple expression
if (c>=13 && c<=19) => {nb = nb + 1}
                    ^countTeen:6: error: illegal start of simple expression
if (d>=13 && d<=19) => {nb = nb + 1}
                    ^